# gnome-plist-editor

./: .buildconfig  Makecache  Makefile.am  README  TODO  autogen.sh  configure.ac
src/: Makefile.am  gnome-plist-editor  gnome-plist-editor.c  gnome-plist-editor.ui  plist-utils.c  plist-utils.h
