AC_PREREQ(2.61)

AC_INIT([gnome-plist-editor], [0.1.5], [opensuse@sukimashita.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign dist-bzip2])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/gnome-plist-editor.c])

AM_SANITY_CHECK

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_LIBTOOL
AC_PROG_INSTALL

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

GLIB_REQUIRED=2.6.0
GTK_REQUIRED=3.20.0
PLIST_REQUIRED=1.12

PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GTK, gtk+-3.0 >= $GTK_REQUIRED)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

PKG_CHECK_MODULES(LIBPLIST, libplist >= $PLIST_REQUIRED)
AC_SUBST(LIBPLIST_CFLAGS)
AC_SUBST(LIBPLIST_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
])
